--- a/Styles/style.css
+++ b/Styles/style.css
@@ -8,6 +8,9 @@
 }
 
 /* shared style */
+.secondary-bg{
+
+}
 .text-primary{
     color: #FD6E0A;
 }
@@ -27,9 +30,26 @@
 
 }
 
+.section-title{
+    font-size: 35px;
+    font-weight: bold;
+    color: #181818;
+
+}
+
+.section-discription{
+    font-size: 18px;
+    color: #757575;
+}
+
+.text-center{
+    text-align: center;
+}
+
 /* header */
 
 .header{
+    background-color: rgb(255, 248, 243);
     background-image: url(../images/developer.png), url(../images/header_bg.png);
     background-repeat: no-repeat;
     background-position:  top left, bottom right;
@@ -68,6 +88,7 @@ nav li a{
     display: flex;
     justify-content: space-between;
     margin: 0 35px 0 200px;
+}
 
 .banner-content{
     max-width: 580px;
@@ -85,4 +106,47 @@ nav li a{
 }
 .banner-profile-pic{
     width: 584;
+}
+
+/* main styles */
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
+main section{
+    margin-top: 130px;
+    margin-bottom: 130px;
+}
+
+/* About styles */
+.about{
+    background-color: rgb(255, 248, 243);
+    border-radius: 10px;
+    padding: 130px 150px;
+    text-align: center;
+    
+}
+
+.about-items{
+    display: flex;
+    justify-content: space-around;
+}
+
+.item-description{
+    font-weight: 600;
+}
+
+/* skills section style */
+
+.skils-container{
+    display: flex;
+    gap: 24px;
+
+}
+
+.skill {
+    padding: 30px;
+    border-radius: 5px;
+    box-shadow: 0px 6px 50px 0px rgb(0, 0, 0, 0.06);
 }
