--- a/Styles/style.css
+++ b/Styles/style.css
@@ -9,6 +9,7 @@
 
 /* shared style */
 .secondary-bg{
+    background-color: rgb(255, 248, 243);
 
 }
 .text-primary{
@@ -149,4 +150,50 @@ main section{
     padding: 30px;
     border-radius: 5px;
     box-shadow: 0px 6px 50px 0px rgb(0, 0, 0, 0.06);
+}
+
+/* resume sectopm stu;e */
+.resume-container{
+    display: flex;
+    gap: 24px;
+}
+
+.experience-sub-title{
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+.expreience-description .experience-sub-title{
+    color: #757575;
+}
+
+.resume hr{
+    margin: 30px;
+}
+.resume-download-cv{
+    margin: 50px;
+}
+
+/* footer style */
+
+footer{
+    margin: 130px 230px;
+    display: flex;
+    gap: 100px;
+    background-color: ;
+}
+.footer-column{
+    width: 50%;
+}
+
+footer input[type="text"], footer input[type="email"], footer textarea {
+    
+    height: 64px;
+    border-radius: 5px;
+    background-color: white;
+    display: block;
+    width: 100%;
+    padding: 10px 20px;
+    margin-bottom: 24px;
+    border: none;
 }
