--- a/Styles/style.css
+++ b/Styles/style.css
@@ -180,7 +180,7 @@ footer{
     margin: 130px 230px;
     display: flex;
     gap: 100px;
-    background-color: ;
+    /* background-color: ; */
 }
 .footer-column{
     width: 50%;
